# aviutl_browser_emoji

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: releaser.yml
src/content/: index.html
src/emoji-selector/: emoji-selector.html
